tests/fails/any_X.stderr
error: expected amino acid 1-letter code
 --> $DIR/any_X.rs:4:22
  |
4 |     let wrong = any!('x');
  |                      ^^^
